--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,26 @@
-.header{
-  background: #69F0AE;
-  font-size: 64px;
+header{
+  background: #AA0601;
+  color: #FFFFFF;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  li {
+    margin-right: 64px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.container {
+  &.header-wrap {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
