--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,219 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+
+img {
+  vertical-align: middle;
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  font-family: 'Noto Sans TC', sans-serif;
+  background-color: #FFFFFF;
+  color: #000000;
+}
+
+.container {
+  width: 1296px;
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.align-stretch {
+  align-items:stretch;
+}
+
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.pt-4 {
+  padding-top: 16px;
+}
+
+.pb-4 {
+  padding-bottom: 16px;
+}
+
+.pt-12 {
+  padding-top: 48px;
+}
+
+.py-4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.py-8 {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.pt-24 {
+  padding-top: 96px;
+}
+
+.pb-20 {
+  padding-bottom: 80px;
+}
+
+//---
+
+.container {
+  max-width: 1296px;
+  width: 100%;
+}
+
+.logo {
+  width: 80px;
+  height: 49px;
+  background-image: url("../images/logo.png");
+  background-repeat: no-repeat;
+}
+
 .index-title {
-  font-size: 100px;
+  border-left: 8px solid #9F1213;
+  font-size: 48px;
+  line-height: 72px;
+  padding-left: 16px;
+}
+
+.location-wrap {
+  padding-top: 96px;
+  padding-bottom: 80px;
+}
+
+.location {
+  font-size: 24px;
+  padding-top: 33px;
+  padding-bottom: 41px;
+  select {
+    color: #495057;
+    font-size: 18px;
+    border: 1px solid #CED4DA;
+    padding: 6px 12px;
+    margin-left: 16px;
+    width: 304px;
+    height: 38px;
+  }
+}
+
+.location-content {
+  width: calc(33.333333% - 16px);
+  margin-bottom: 48px;
+  margin-right: 24px;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  h2, .info, .button {
+    border: 1px solid #00000020;
+    color: #212529;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 36px;
+    padding: 8px 24px;
+  }
+  .info {
+    padding: 16px 24px;
+    li {
+      font-size: 20px;
+      line-height: 30px;
+      margin-bottom: 8px;
+    }
+  }
+  .button {
+    display: block;
+    background: #000000;
+    color: #FFFFFF;
+    font-size: 19px;
+    line-height: 27px;
+    text-align: center;
+    padding: 16px 0;
+  }
 }
