--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,11 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header>
+    <div class="container header-wrap">
+        <div class="logo"></div>
+        <ul class="menu">
+            <li><a href="">系列鏡框</a></li>
+            <li><a href="">門市據點</a></li>
+            <li><a href="">部落格</a></li>
+            <li><a href="">常見問題</a></li>
+        </ul>
+    </div>
+</header>
