--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -34,6 +34,11 @@ footer{
   a {
     display: block;
   }
+  .material-symbols-outlined {
+    vertical-align: middle;
+    margin-right: 20px;
+    font-size: 40px;
+  }
 }
 
 .copyright {
