--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -216,4 +216,8 @@ body {
     text-align: center;
     padding: 16px 0;
   }
+  .material-symbols-outlined {
+    vertical-align: middle;
+    margin-right: 11px;
+  }
 }
