--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -15,8 +15,8 @@
             </div>
         </div>
         <div class="contact">
-            <a href="">0800-000-000</a>
-            <a href="">glasses@business.com</a>
+            <a href=""><span class="material-symbols-outlined">call</span>0800-000-000</a>
+            <a href=""><span class="material-symbols-outlined">mail</span>glasses@business.com</a>
         </div>
         <div class="copyright-wrap">
             <p class="copyright">Copyright © 2020 Glasses.All rights reserved.</p>
