--- a/assets/scss/partials/_media.scss
+++ b/assets/scss/partials/_media.scss
@@ -93,6 +93,10 @@
     font-size: 16px;
     line-height: 24px;
     padding: 24px 0;
+    .material-symbols-outlined {
+      margin-right: 11px;
+      font-size: 22px;
+    }
   }
   .copyright-wrap {
     flex-direction: column;
